# Lynx

./: .gitignore  .gitmodules  CMakeLists.txt  CreateProject.bat  LynxExternal.lua  README.md  UpdateProjectFiles.bat  buildcmake.bat  premake5.lua  vcpkg.json
ProjectSetup/: GLFWpremake5.lua  Project.cpp  imguipremake5.lua
Source/: SessionFileSink.cpp  SessionFileSink.h  lxpch.h
Source/Lynx/: Application.cpp  Application.h  EntryPoint.h  Image.cpp  Image.h  Log.cpp  Log.h  Random.cpp  Random.h
Source/Lynx/Core/: Application.cpp  Application.h  Assert.h  Layer.h  Log.cpp  Log.h  Random.cpp  Timer.h
assets/Scripts/: UpgradeScreen.lua  UpgradeScreen.lua.lxmeta  test.lua  test.lua.lxmeta
editor/: CMakeLists.txt
editor/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
editor/src/Components/: EditorComponents.h
editor/src/ImGui/: EditorTheme.h
editor/src/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  AssetPropertiesPanel.cpp  AssetPropertiesPanel.h  EditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  RenderSettings.cpp  RenderSettings.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  StatsPanel.cpp  StatsPanel.h  Viewport.cpp  Viewport.h
editor/src/Utils/: FontImporter.cpp  FontImporter.h  PlatformUtils.cpp  PlatformUtils.h
engine/: CMakeLists.txt
engine/resources/: SM_DefaultCube.gltf  SM_DefaultCube.gltf.lxmeta  T_DefaultChecker.png.lxmeta  T_Error.png.lxmeta  T_White.png.lxmeta
engine/resources/Icons/: DirectoryIcon_128px.png.lxmeta  FileIcon_128px.png.lxmeta
engine/resources/Shaders/: Blit.glsl  Blit.glsl.lxmeta  Bloom.glsl  Bloom.glsl.lxmeta  Composite.glsl  Composite.glsl.lxmeta  DebugLine.glsl  DebugLine.glsl.lxmeta  DepthOnly.glsl  DepthOnly.glsl.lxmeta  Grid.glsl  Grid.glsl.lxmeta  MipMapGen.glsl  MipMapGen.glsl.lxmeta  Particle.glsl  Particle.glsl.lxmeta  Shadow.glsl  Shadow.glsl.lxmeta  ShadowMap.glsl  Standard.glsl  Standard.glsl.lxmeta  StandardEditor.glsl  StandardEditor.glsl.lxmeta  UI.glsl  UI.glsl.lxmeta  UI_Standard.glsl  UI_Standard.glsl.lxmeta  UI_Text.glsl  UI_Text.glsl.lxmeta
engine/src/: Lynx.h  lxpch.cpp  lxpch.h
engine/src/Lynx/: ComponentRegistry.h  Core.h  Engine.cpp  Engine.h  GameModule.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h  ScriptRegistry.cpp  ScriptRegistry.h  TypeRegistry.h  UUID.cpp  UUID.h  Window.cpp  Window.h
engine/src/Lynx/Asset/: Asset.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetRef.h  AssetRegistry.cpp  AssetRegistry.h  AssetSpecification.cpp  AssetSpecification.h  AssetTypes.cpp  AssetTypes.h  Font.cpp  Font.h  GLTFHelpers.h  Material.cpp  Material.h  MeshSpecification.h  Prefab.cpp  Prefab.h  Script.cpp  Script.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  TextureSpecification.h
engine/src/Lynx/Asset/Serialization/: MaterialSerializer.cpp  MaterialSerializer.h  SpriteSerializer.cpp  SpriteSerializer.h
engine/src/Lynx/Core/: DllLoader.cpp  DllLoader.h
engine/src/Lynx/Event/: ActionEvent.h  AssetEvents.h  Event.cpp  Event.h  EventTypeID.cpp  EventTypeID.h  KeyEvent.h  MouseEvent.h  SceneEvents.h  WindowEvent.h
engine/src/Lynx/ImGui/: EditorUIHelpers.cpp  EditorUIHelpers.h  ImGuiShaders.h  LXUI.cpp  LXUI.h  imgui_nvrhi.cpp  imgui_nvrhi.h
engine/src/Lynx/Physics/: PhysicsEvents.h  PhysicsLayers.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h
engine/src/Lynx/Renderer/: BindingSetCache.h  Camera.h  DebugPass.cpp  DebugPass.h  DebugRenderer.cpp  DebugRenderer.h  EditorCamera.cpp  EditorCamera.h  ForwardPass.cpp  ForwardPass.h  Frustum.h  GridPass.cpp  GridPass.h  RenderPass.cpp  RenderPass.h  RenderPipeline.h  Renderer.cpp  Renderer.h  SamplerCache.cpp  SamplerCache.h  SceneCamera.cpp  SceneCamera.h  SceneRenderer.cpp  SceneRenderer.h  ShaderUtils.cpp  ShaderUtils.h  ShadowPass.cpp  ShadowPass.h
engine/src/Lynx/Renderer/Passes/: BloomPass.cpp  BloomPass.h  CompositePass.cpp  CompositePass.h  DebugPass.cpp  DebugPass.h  DepthPass.cpp  DepthPass.h  ForwardPass.cpp  ForwardPass.h  GridPass.cpp  GridPass.h  MipMapBlitPass.cpp  MipMapBlitPass.h  MipMapGenPass.cpp  MipMapGenPass.h  ParticlePass.cpp  ParticlePass.h  ShadowPass.cpp  ShadowPass.h  UIPass.cpp  UIPass.h
engine/src/Lynx/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
engine/src/Lynx/Scene/Components/: Components.h  IDComponent.h  LuaScriptComponent.h  NativeScriptComponent.cpp  NativeScriptComponent.h  ParticleComponents.h  PhysicsComponents.h  UIComponents.h
engine/src/Lynx/Scene/Systems/: ISystem.h  ParticleSystem.cpp  ParticleSystem.h  SystemManager.cpp  SystemManager.h
engine/src/Lynx/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptEngineData.cpp  ScriptEngineData.h  ScriptWrappers.h  ScriptWrappers_Core.cpp  ScriptWrappers_Game.cpp  ScriptWrappers_Math.cpp  ScriptWrappers_UI.cpp
engine/src/Lynx/UI/Core/: UICanvas.cpp  UICanvas.h  UIElement.cpp  UIElement.h  UIElementRef.h  UIGeometry.cpp  UIGeometry.h  UIObjectPool.h
engine/src/Lynx/UI/Rendering/: UIBatcher.cpp  UIBatcher.h  UIPass.cpp  UIPass.h
engine/src/Lynx/UI/Widgets/: GridPanel.cpp  GridPanel.h  StackPanel.cpp  StackPanel.h  UIButton.cpp  UIButton.h  UIImage.cpp  UIImage.h  UIScrollView.cpp  UIScrollView.h  UIText.cpp  UIText.h
engine/src/Lynx/Utils/: FileWatcher.cpp  FileWatcher.h  JsonHelpers.h  MathHelpers.cpp  MathHelpers.h  PathUtils.cpp  PathUtils.h  TextUtils.h
game/: CMakeLists.txt
game/src/: GameConfig.h  MyGameModule.cpp  MyGameModule.h
game/src/Components/: GameComponents.h  TestNativeScript.h
game/src/Events/: GameEvents.h
game/src/Systems/: CameraSystem.h  CharacterMovementSystem.h  DamageSystem.h  EnemySystem.h  ExperienceSystem.h  GameManagerSystem.h  HUDSystem.h  HealthSystem.h  LifecycleSystem.h  PickupSystem.h  PlayerSystem.h  ProjectileSystem.h  WaveSystem.h  WeaponSystem.h
game_dll/: CMakeLists.txt
game_dll/src/: dll_main.cpp
game_standalone/: CMakeLists.txt
game_standalone/src/: main.cpp
(+5 files in other folders)
